Update middlewares to use panthor middleware interface

--- a/app/di.yml
+++ b/app/di.yml
@@ -212,6 +212,7 @@ services:
             - @user.repo
             - @service_container
             - @url.helper
+            - @slim.request
 
     # Bounce non-admins
     admin.bouncer:
@@ -221,6 +222,7 @@ services:
             - @permissions
             - @denied.twig
             - @login.bouncer
+            - @slim.response
 
     # Bounce non-super-admins
     superadmin.bouncer:
@@ -230,6 +232,7 @@ services:
             - @permissions
             - @denied.twig
             - @login.bouncer
+            - @slim.response
 
     # Bounce users who don't have access to modify a repository
     repoadmin.bouncer:
@@ -239,9 +242,10 @@ services:
             - @permissions
             - @denied.twig
             - @login.bouncer
-            - @slim.route
             - @repository.repo
-            - @slim
+            - @slim.response
+            - @slim.not.found
+            - @slim.route.parameters
 
     # Bounce unauthenticated api clients
     api.auth.bouncer:
@@ -255,6 +259,7 @@ services:
         class: 'QL\Hal\Middleware\CachedApiMiddleware'
         arguments:
             - @response.formatter
+            - @slim.response
 
     ######################################################################################################################
     # NON-DATABASE SERVICES
