Switch to using panthor di config and panthor route loader

--- a/app/config.global.yml
+++ b/app/config.global.yml
@@ -53,6 +53,7 @@ parameters:
     unique.alphabet: '123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ'
     unique.size: 4
     date.timezone: 'America/Detroit'
+    twig.template.dir: 'app/templates'
 
     ############################################################################
     # cookie
